create authentication and logout endpoints

--- a/src/main/resources/templates/posts/layout.html
+++ b/src/main/resources/templates/posts/layout.html
@@ -27,7 +27,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">Profile</a></li>
-                                <li><a class="dropdown-item">Log out</a></li>
+                                <li><a class="dropdown-item" th:href="@{/logout}">Log out</a></li>
                             </ul>
                         </div>
                     </div>
