--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -28,7 +28,7 @@
         <div class="col-md-6">
         <div class="login-form">
             <h2 class="text-center mb-4">Login</h2>
-            <form action="#" method="post">
+            <form th:action="@{/login}" method="post">
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username" required autocomplete="off">
